migrated guava function to java 8 function in configs